# epc-tofcam-toolkit

./: .coverage  .gitignore  .gitlab-ci.yml  .mypy.ini  .pytest.ini  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_ESPROS.txt  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  gui_instructions.md  index.rst  install_instructions.md  tofCam_modules.md
docs/: requirements.txt
docs/source/: api.rst  conf.py  contribute.md  gui_instructions.md  index.rst  install_instructions.md  tofCam_modules.md  tofCam_modules.rst
examples/: TOFcam611.getImage.py  TOFcam611_getImage.py  TOFcam635_getImage.py  TOFcam660_getImage.py
scripts/: TestPWRcycleLoop.py  Test_FPS.py  Test_multi_camera_sysPWRreset_cycleLoop.py  Test_multi_camera_sysPWRreset_cycleLoop_Trials.py  Test_multi_camera_sysPWRreset_cycleLoop_binning.py  Test_sysPWRreset_cycleLoop.py  analyze_captured_data.py  calibrate_drnu.py  calibrate_lense.py  flexModDistance.py  plot_DRNU.py  requirements.txt  update_firmware.py  update_version.py  verify_firmware.py
src/epc/: __init__.py  _version.py
src/epc/data/: lens_calibration_ultra_wide_field_p101156.csv  lens_calibration_wide_wide_field_p101152.csv  lense_calibration.csv  lense_calibration_narrow_field.csv  lense_calibration_standard_field.csv
src/epc/tofCam611/: __init__.py  camera.py  commandList.py  communicationType.py  crc.py  serialInterface.py  tofCam611.py  update.py
src/epc/tofCam611/constants/: __calibration.py  __constants.py  __epc611.py  __epc611SpiRegister.py  __epc611SpiRegisterSettings.py  __modFrequency.py  __mode.py  __writeCalibrationData.py
src/epc/tofCam635/: __init__.py  commands.py  crc.py  h5Cam635.py  tofCam635.py  tofcam635.py  tofcam635Header.py  util.py
src/epc/tofCam635/communication/: __init__.py  serialInterface.py
src/epc/tofCam635/communication/communicationConstants/: __init__.py  command.py  commandList.py  data.py  identification.py  tofcam635HeaderConstants.py  type.py  update.py
src/epc/tofCam635/constants/: __constants.py  __modFrequency.py  __mode.py  __writeCalibrationData.py
src/epc/tofCam660/: __init__.py  command.py  communicationType.py  crc.py  epc660.py  firmware_update.py  interface.py  mac_address_generator.py  memory.py  parser.py  productfactory.py  response.py  server.py  tofCam660.py  tofcam660.py  trace_interface.py  usb_interface.py
src/epc/tofCam_data/: config.py
src/epc/tofCam_gui/: 611_gui.py  611_video_stream.py  __init__.py  config.py  data_logger.py  example_video_stream.py  gui_tofCam611.py  gui_tofCam611_bridge.py  gui_tofCam635.py  gui_tofCam635_bridge.py  gui_tofCam660.py  gui_tofCam660_bridge.py  gui_tofCams.py  gui_tofCams_bridge.py  gui_tofRrange.py  icon_svg.py  roi_widget.py  settings_widget.py  settings_widget_611.py  streamer.py  transformations.py  video_widget.py
src/epc/tofCam_gui/widgets/: __init__.py  console_widget.py  filter_widgets.py  menuBar_widget.py  roi_widget.py  settings_widget.py  toolbar_widget.py  video_widget.py
src/epc/tofCam_lib/: __init__.py  algorithms.py  calibration_utils.py  compensators.py  crc.py  decorator.py  filters.py  h5Cam.py  projection_models.py  serial_interface.py  tofCam.py  transformations_3d.py  xyz_transformation.py
tests/: config.py  testCam660.py  test_capturing.py
tests/tofCam611/: test_cam611.py  test_tofRange.py
tests/tofCam635/: test_tofcam635.py
tests/tofCam660/: test_benchmark.py  test_cam660.py  test_commands.py  test_crc.py  test_fps_rolling.py  test_hw_trigger.py  test_hw_trigger_minimal.py  test_image_parser.py  test_memory.py  test_power_cycling.py  test_powercycle.py  test_traceInterface.py
tests/tofCam_lib/: test_crc.py  test_h5cam.py  test_serialInterface.py  test_tofcams.py
