[metadata]
name = epc-tofcam-toolkit
description = "Toolkit for ESPROS TOFcam's"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    matplotlib
    pillow
    opencv-python
    pyqtgraph
    PySide6
    pyserial
    scipy
    pyqtdarktheme
    qtconsole 
    ipython
    pyopengl

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tofcam660 = epc.tofCam_gui.gui_tofCam660_bridge:main
    tofcam635 = epc.tofCam_gui.gui_tofCam635_bridge:main
    tofcam611 = epc.tofCam_gui.gui_tofCam611_bridge:main

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1