[metadata]
name = epc-tofcam-toolkit
author = "EPC"
author_email = "info@espros.com"
version = attr: epc.VERSION
description = "Toolkit for ESPROS TOFcam's"
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://www.espros.com
url = https://github.com/espros/epc-tofcam-toolkit
doc_url = https://epc-tofcam-toolkit.readthedocs.io/en/latest/  

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    matplotlib
    pillow
    opencv-python
    pyqtgraph
    PySide6
    pyserial
    scipy
    pyqtdarktheme
    qtconsole 
    ipython
    pyopengl

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tofcam660 = epc.tofCam_gui.gui_tofCam660_bridge:main
    tofcam635 = epc.tofCam_gui.gui_tofCam635_bridge:main
    tofcam611 = epc.tofCam_gui.gui_tofCam611_bridge:main

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1