[metadata]
name = epc-tofcam-toolkit
author = "EPC"
author_email = "info@espros.com"
version = attr: epc.VERSION
description = "Toolkit for ESPROS TOFcam's"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.espros.com
license_file = LICENSE.txt
project_urls = 
    Documentation = https://epc-tofcam-toolkit.readthedocs.io/en/latest/  
    Source = https://github.com/espros/epc-tofcam-toolkit
keywords = 
    TOF
    TOFcam
    ESPROS
    EPC
    Toolkit
    pointcloud
    3D
    time of flight
    TOF camera

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy>=2.0.0
    matplotlib>=3.10.0
    pillow>=11.0.0
    opencv-python>=4.10.0.84
    pyqtgraph>=0.13.7
    PySide6>=6.8.1
    pyserial>=3.5
    scipy>=1.14.1
    PyQtDarkTheme-fork==2.3.2
    qtconsole>=5.6.1
    ipython>=8.30.0
    pyopengl>=3.1.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tofcam660 = epc.tofCam_gui.gui_tofCam660_bridge:main
    tofcam635 = epc.tofCam_gui.gui_tofCam635_bridge:main
    tofcam611 = epc.tofCam_gui.gui_tofCam611_bridge:main
    tofrange611 = epc.tofCam_gui.gui_tofCam611_bridge:main

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1